ops/kubernetes/kustomize/overlays/linode-test-catarse/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catarse
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: catarse
spec:
  rules:
    - host: bundlepledge.com
      http:
        paths:
          - path: /
            backend:
              serviceName: "catarse"
              servicePort: 3000
    - host: www.bundlepledge.com
      http:
        paths:
          - path: /
            backend:
              serviceName: "catarse"
              servicePort: 3000
  tls:
    - hosts:
      - bundlepledge.com
      - www.bundlepledge.com
      secretName: bundle-pledge-catarse-tls
